gcc/testsuite/g++.dg/init/delete3.C
int operator delete (void*, int);  // { dg-error "5:.operator delete. must return type .void." }
